--- a/ex1b-nordic.html
+++ b/ex1b-nordic.html
@@ -493,10 +493,11 @@ Alternatively if you want to just have a single hero
 
         // Ejercicio 5
         // MODIFICA el texto del segundo item de menu. En vez de 'About', deberíamos ver 'About US'
-
+        document.querySelector('#item-about').textContent ="About US";
+        
         // Ejercicio 6
         // MODIFICA el texto del primer producto del carousel de fotos (ese cojín raro), y cambia el texto por cualquier otra cosa que describa para ti mejor ese cojín
-
+        document.querySelector('#cojin-raro').textContent ="Cojín con dibujos";
         // Ejercicio 7
         // Modifica el color del fondo del <nav> al valor 'azure'
         // BONUS: NO modifiques el HTML
@@ -504,7 +505,7 @@ Alternatively if you want to just have a single hero
 
         // Ejercicio 8 (Difícil)
         // Cambia el valor de la propiedad .src de la segunda imagen por este otro https://i.ibb.co/j83Y290/fotogato.jpg
-
+        document.querySelector("#producto-2").src= "https://i.ibb.co/j83Y290/fotogato.jpg";
 
     </script>
 </body>
